--- a/airbnb/templates/airbnbs/single_posts.html
+++ b/airbnb/templates/airbnbs/single_posts.html
@@ -1,2 +1,6 @@
 <h1>hi</h1>
 {{single}}
+<hr>
+<a href="{{single.get_absolute_url}}">edit post</a>
+<hr>
+<a href="{% url 'airbnb_post:delete_post' single.id %}">delete_post</a>
